@@ -162,7 +162,7 @@ scaler_type widget_select_scaler( int (*selector)( scaler_type ) );
 typedef struct widget_select_t {
 
   const char *title;	/* Dialog title */
-  const char **options;	/* The available options */
+  const char * const *options;	/* The available options */
   size_t count;		/* The number of options */
   size_t current;	/* Which option starts active? */
 
