@@ -56,7 +56,7 @@ print Fuse::GPL( 'options.c: options dialog boxes',
 #include "win32internals.h"
 
 static int
-option_enumerate_combo( const char **options, char *value, int count,
+option_enumerate_combo( const char * const *options, char *value, int count,
                         int def ) {
   int i;
   if( value != NULL ) {
@@ -95,7 +95,7 @@ foreach( @dialogs ) {
 
 		    print << "CODE";
 
-static const char *$_->{name}_$widget->{value}_combo[] = {
+static const char * const $_->{name}_$widget->{value}_combo[] = {
 CODE
 		    foreach( split( /\|/, $widget->{data1} ) ) {
 			print << "CODE";
